Fix layout bug in accomodation_styles.css

--- a/assets/css/accomodation_styles.css
+++ b/assets/css/accomodation_styles.css
@@ -96,12 +96,19 @@
     -webkit-box-shadow: 1px 1px 16px 0px rgba(0,0,0,0.3); 
     box-shadow: 1px 1px 16px 0px rgba(0,0,0,0.3);
 }
-.acco-flex-group p {
+.acco-flex-group > p {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     padding: 0 8px;
     margin: 8px;
     width: 40%;
+}
+.acco-flex-group > div > p {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    padding: 0 8px;
+    margin: 8px;
+    width: 100%;
 }
 .sleeps {
     font-family: granville, Times, serif;
